<resources>
    <string name="app_name">Personal Manager Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Amit Chauhan</string>
    <string name="nav_header_subtitle">@amitChauhan1711</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="label_following">Following</string>
    <string name="label_followers">Followers</string>

    <string name="label_profile">Profile</string>
    <string name="label_lists">Lists</string>
    <string name="label_bookmarks">Bookmarks</string>
    <string name="label_moments">Moments</string>
    <string name="label_settings_and_privacy">Settings and Privacy</string>
    <string name="label_help_center">Help Center</string>

    <string name="following">48</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        PROFILE PAGE
    </string>
    <string name="title_activity_lists">Lists</string>
</resources>
