<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nav_profile"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_profile"
        android:drawablePadding="16dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@+id/nav_lists"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_speaker_notes_black_24dp"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_lists"
        android:drawablePadding="16dp"
        android:drawableLeft="@drawable/ic_speaker_notes_black_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@+id/nav_bookmarks"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_bookmark_border_black_24dp"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_bookmarks"
        android:drawableLeft="@drawable/ic_bookmark_border_black_24dp"
        style="@style/DrawerTextStyle"
        android:drawablePadding="16dp"/>

    <TextView
        android:id="@+id/nav_moments"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_flash_on_black_24dp"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_moments"
        android:drawableLeft="@drawable/ic_flash_on_black_24dp"
        style="@style/DrawerTextStyle"
        android:drawablePadding="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000"/>

    <TextView
        android:id="@+id/nav_settings_and_privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_settings_and_privacy"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@+id/nav_help_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_textView_height"
        android:text="@string/label_help_center"
        style="@style/DrawerTextStyle"/>

</LinearLayout>